reflectapi-demo/tests/errors/invalid_reflect_enum.rs
#[derive(reflectapi::Input)]
union MyUnion {
    f: u8,
}

fn main() {}
